syntax = "proto2";

message Playground {
  required string canonical_name = 1;
  required string name = 2;
  required uint32 zip_code = 3;
  optional string logo_url = 4;
}

